tests/compilation_tests/02_fail_type_mismatch.stderr
error[E0277]: the trait bound `i64: From<f64>` is not satisfied
 --> tests/compilation_tests/02_fail_type_mismatch.rs:9:1
  |
9 | tensor_type!(MyTensor, [my_param1, my_param2], Params, tch::Kind::Double);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<f64>` is not implemented for `i64`
  |
  = help: the following other types implement trait `From<T>`:
            <i64 as From<bool>>
            <i64 as From<i8>>
            <i64 as From<i16>>
            <i64 as From<i32>>
            <i64 as From<u8>>
            <i64 as From<u16>>
            <i64 as From<u32>>
            <i64 as From<Scalar>>
          and $N others
  = note: required for `f64` to implement `Into<i64>`
  = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
